packages/next-swc/crates/core/tests/errors/next-font-downloaders/spread-arg/output.js
fn(...{});
const a = fn(...{});
const inter = Inter(...{});
Inter(...{});
